--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
           <span class="header__title_span-accent"> Specialty coffee </span>
         </h1>
         <h1 class="header__title">in the Practicum library</h1>
-        <p class="header__description">
-          Welcome to our study zone! We've got the coffee to energize you and
-          the cozy vibes to help you get creative.
-        </p>
+        <div class="header__description">
+          <p>
+            Welcome to our study zone! We've got the coffee to energize you and
+            the cozy vibes to help you get creative.
+          </p>
+        </div>
         <img
           src="./images/inside_coffee_shop.png"
           alt="Coffee Shop"
