--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__title_span-accent"> Specialty coffee </span>
+          <span class="header__title_span-accent"> Specialty coffee </span>in
+          the Practicum library
         </h1>
-        <h1 class="header__title">in the Practicum library</h1>
         <div class="header__description">
           <p>
             Welcome to our study zone! We've got the coffee to energize you and
