Finished header, move on to part 2

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <div class="page">
       <header class="header">
+        <img
+          class="header__logo"
+          src="./images/logo_coffee_shop.svg"
+          alt="Practicum Coffeeshop Logo"
+        />
         <nav class="nav">
-          <img
-            class="header__logo"
-            src="./images/logo_coffee_shop.svg"
-            alt="Practicum Coffeeshop Logo"
-          />
           <ul class="nav__links">
             <li>
               <a class="nav__link" href="#Menu">Menu</a>
@@ -34,19 +34,17 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__title_span-accent"> Specialty coffee </span>in
-          the Practicum library
+          <span class="header__title_span-accent">Specialty coffee</span>in the
+          Practicum Library
         </h1>
-        <div class="header__description">
-          <p>
-            Welcome to our study zone! We've got the coffee to energize you and
-            the cozy vibes to help you get creative.
-          </p>
-        </div>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
         <img
           src="./images/inside_coffee_shop.png"
           alt="Coffee Shop"
-          class="header__coffee-shop"
+          class="header__image"
         />
         <div class="header__footer">
           <div class="header__wrapper_footer">
