--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
           <h3 class="card__title">Filter</h3>
           <ul class="card__list">
             <li class="card__list-item">
-              <span class="card__list-divider">Regular (12oz)</span>$1
+              Regular (12oz)
+              <span class="card__list-divider"></span>
+              $1
             </li>
             <li class="card__list-item">
               Large(16oz)
