--- a/index.html
+++ b/index.html
@@ -66,103 +66,108 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-          <div class="menu__card">
+          <div class="card">
           <h3 class="card__title">Filter</h3>
           <ul class="card__list">
             <li class="card__list-item">
-              Regular (12oz)
-              <span class="card__list-divider"></span>
-              $1
+              Regular (12oz)<span class="card__list-divider"></span>$1
             </li>
             <li class="card__list-item">
-              Large(16oz)
-              <span class="card__list-divider"></span> 
-              $1.25
+              Large(16oz)<span class="card__list-divider"></span> $1.25
             </li>
 
             <li class="card__list-item">
-              XL (20oz)
-              <span class="card__list-divider"></span>
-              $1.5
+              XL (20oz)<span class="card__list-divider"></span>$1.5
             </li>
 
             <li class="card__list-item">
-              Party-size (24oz, decaf) 
-              <span class="card__list-divider"></span>
-              $1.75
+              Party-size (24oz, decaf) <span class="card__list-divider"></span>$1.75
             </li>
 
             <li class="card__list-item">
-              Iced Coffee (16oz) &nbsp;
-              <span class="card__list-divider" ></span>
-              $1.25
+              Iced Coffee (16oz) &nbsp;<span class="card__list-divider" ></span>$1.25
             </li>
           </div>                    
-          <div class="menu__card">
+          <div class="card">
             <h3 class="card__title">Espresso</h3> 
             <ul class="card__list">
               <li class="card__list-item">
-                Macchiato
-                <span class="card__list-divider"></span>
-                 $2.25
+                Macchiato<span class="card__list-divider"></span> $2.25
               </li>
               <li class="card__list-item">
-                Cortado
-                <span class="card__list-divider"></span>
-                $2.5
+                Cortado<span class="card__list-divider"></span> $2.5
               </li>
               <li class="card__list-item">
-                Mocha
-                <span class="card__list-divider"></span>
-                $3
+                Mocha<span class="card__list-divider"></span> $3
               </li>
               <li class="card__list-item">
-                Sunrise in the Bay Area
-                <span class="card__list-divider"></span>
-                $10
+                Sunrise in the Bay Area<span class="card__list-divider"></span> $10
               </li>
             </ul>
           </div>
-          <div class="menu__card">
+          <div class="card">
             <h3 class="card__title">Baked Goods</h3>
             <ul class="card__list">
               <li class="card__list-item">
-                Almond Croissant
-                <span class="card__list_divider"></span>
-                $2
+                Almond Croissant<span class="card__list-divider"></span> $2
               </li>
               <li class="card__list-item">
-                Banana Bread
-                <span class="card__list_divider"></span>
-                $1.75
+                Banana Bread<span class="card__list-divider"></span> $1.75
               </li>              
               <li class="card__list-item">
-                Key Lime Pie
-                <span class="card__list_divider"></span>
-                $3
+                Key Lime Pie<span class="card__list-divider"></span> $3
               </li>
               <li class="card__list-item">
-                Blue Velvet Cake
-                <span class="card__list_divider"></span>
-                $3.75
+                Blue Velvet Cake<span class="card__list-divider"></span> $3.75
               </li>
               <li class="card__list-item">
-                Web Cookie
-                <span class="card__list_divider"></span>
-                $2
-              </li>
+                Web Cookie<span class="card__list-divider"></span> $2
+              </li> 
               <li class="card__list-item">
-                Fresh Bug'uette
-                <span class="card__list_divider"></span>
-                $0.25
+                Fresh Bug'uette<span class="card__list-divider"></span> $0.25
               </li>
             </ul>
           </div>
           </div>
         </section>
-        <section class="recipes" id="Recipes"></section>
+        <section class="recipes" id="Recipes">
+          <h1 class="recipes__title">Recipes</h1>
+          <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenienece:</p>
+          <div class="recipes__videos">
+            <div>
+              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            <p class="recipes__video-caption">
+              <span>Aeropress Recipe</span>
+              <span>~5 min</span>
+            </p>
+            </div>
+            <div>
+            <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p class="recipes__video-caption">
+              <span>French Press Recipe</span>
+              <span>~15 min</span>
+            </p>
+            </div>
+          </div>
+        </section>
+        <section class="reservation" id="Reservation">
+          <h1 class="reservation__title">Book a table</h1>
+          <form class="reservation__form">
+            <fieldset class="form__fieldset">
+              <label class="form__label">Name *</label>
+              <input class="form__input" type="text" required placeholder="Name Surname"></input>
+              <label class="form__label">Number of guests *</label>
+              <input class="form__input" type="number" required placeholder="1-8"></input>
+              <label class="form__label">Date & time *</label>
+              <input class="form__input" type="datetime" required placeholder="mm/dd/yyyy --:-- --"></input>
+              <label class="form__label">Your email *</label>
+              <input class="form__input" type="email" required placeholder="email@email.com"></input>  
+            </fieldset>
+              <button class="form__button">Book a table</button>              
+              <input class="form__checkbox" type="checkbox" required></input>
+              <label class="form__label">I agree with the terms of use</label>
 
-        <section class="reservation" id="Reservation"></section>
+          </form>
+        </section>
 
         <section class="about" id="Contacts"></section>
       </main>
