--- a/index.html
+++ b/index.html
@@ -151,21 +151,20 @@
         </section>
         <section class="reservation" id="Reservation">
           <h1 class="reservation__title">Book a table</h1>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label class="form__label">Name *</label>
-              <input class="form__input" type="text" required placeholder="Name Surname"></input>
-              <label class="form__label">Number of guests *</label>
-              <input class="form__input" type="number" required placeholder="1-8"></input>
-              <label class="form__label">Date & time *</label>
-              <input class="form__input" type="datetime" required placeholder="mm/dd/yyyy --:-- --"></input>
-              <label class="form__label">Your email *</label>
-              <input class="form__input" type="email" required placeholder="email@email.com"></input>  
+              <label class="form__label" for="name">Name *</label>
+              <input class="form__input" type="text" id="name" required placeholder="Name Surname"></input>
+              <label class="form__label" for="number">Number of guests *</label>
+              <input class="form__input" type="number" id="number" required placeholder="1-8"></input>
+              <label class="form__label" for="datetime">Date & time *</label>
+              <input class="form__input" type="datetime" id="datetime" required placeholder="mm/dd/yyyy --:-- --"></input>
+              <label class="form__label" for="email">Your email *</label>
+              <input class="form__input" type="email" id="email" required placeholder="email@email.com"></input>  
             </fieldset>
-              <button class="form__button">Book a table</button>              
-              <input class="form__checkbox" type="checkbox" required></input>
-              <label class="form__label">I agree with the terms of use</label>
-
+              <button class="form__button" type="submit">Book a table</button>              
+              <label class="form__label" for="terms">I agree with the terms of use</label>
+              <input class="form__checkbox" type="checkbox" id="terms" required></input>
           </form>
         </section>
 
