--- a/index.html
+++ b/index.html
@@ -158,18 +158,17 @@
               <label class="form__label" for="number">Number of guests *</label>
               <input class="form__input" type="number" id="number" required placeholder="1-8"></input>
               <label class="form__label" for="datetime">Date & time *</label>
-              <input class="form__input" type="datetime" id="datetime" required placeholder="mm/dd/yyyy --:-- --"></input>
+              <input class="form__input" type="datetime" id="datetime" required placeholder="mm/dd/yyyy --:-- --" ></input>
               <label class="form__label" for="email">Your email *</label>
               <input class="form__input" type="email" id="email" required placeholder="email@email.com"></input>  
             </fieldset>
-              <button class="form__button" type="submit">Book a table</button>              
-              <label class="form__label" for="terms">I agree with the terms of use</label>
-              <input class="form__checkbox" type="checkbox" id="terms" required></input>
+              <button class="form__button" type="submit">Book a table</button> 
+              <input class="form__checkbox form__tos" type="checkbox" id="tos" required></input>              
+              <label class="form__label form__tos" for="tos">I agree with the terms of use</label>
           </form>
         </section>
-
         <section class="about" id="Contacts"></section>
-      </main>
+      </mai
       <footer class="footer"></footer>
     </div>
   </body>
