--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
           <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenienece:</p>
           <div class="recipes__videos">
             <div>
-              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            <p class="recipes__video-caption">
+              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+              <p class="recipes__video-caption">
               <span>Aeropress Recipe</span>
               <span>~5 min</span>
             </p>
@@ -158,17 +159,19 @@
               <label class="form__label" for="number">Number of guests *</label>
               <input class="form__input" type="number" id="number" required placeholder="1-8"></input>
               <label class="form__label" for="datetime">Date & time *</label>
-              <input class="form__input" type="datetime" id="datetime" required placeholder="mm/dd/yyyy --:-- --" ></input>
+              <input class="form__input" type="datetime-local" id="datetime" required placeholder="mm/dd/yyyy --:-- --" ></input>
               <label class="form__label" for="email">Your email *</label>
               <input class="form__input" type="email" id="email" required placeholder="email@email.com"></input>  
             </fieldset>
               <button class="form__button" type="submit">Book a table</button> 
-              <input class="form__checkbox form__tos" type="checkbox" id="tos" required></input>              
-              <label class="form__label form__tos" for="tos">I agree with the terms of use</label>
+              <label class="form__label" for="tos">
+                <input class="form__checkbox" type="checkbox" id="tos" required></input>        
+                I agree with the terms of use
+              </label>
           </form>
         </section>
         <section class="about" id="Contacts"></section>
-      </mai
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
