--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practicum Coffeeshop</title>
-    <link rel="stylesheet" href="pages/normalize.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" type="image" href="./images/favicon_coffee_bean.ico" />
   </head>
-
   <body>
     <div class="page">
       <header class="header">
