Fix social media heading positioning

--- a/index.html
+++ b/index.html
@@ -169,9 +169,52 @@
               </label>
           </form>
         </section>
-        <section class="about" id="Contacts"></section>
+        <section class="about" id="Contacts">
+          <div class="about">
+            <h4 class="about__title">About the Cofee Shop</h4>    
+            <div class="about__circle"></div>
+            <div class="about__circle about__circle_animation_blurred"></div>
+          </div>
+          <div class=about__content>
+            <p class="about__paragraph">Our coffee shop is located in the Practicum Library's hall. It features 6 tables and free WiFi.</p>
+            <P class="about__paragraph"> Our main mission is keeping guests cozy and energized.</p>
+            <p class="about__paragraph">Besides that, we try to reduce our environmental impact — so we don't sell single-use cups. But you can buy one of our reusable cups!</p>
+        </div>
+       </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">        
+        <div class="footer__content">
+        <h5 class="footer__logo">             
+          <img
+            src="./images/practicum_logo.svg"
+            alt="practicum logo"
+        </h5>
+        <h5 class="footer__social-heading">Social media</h5>
+        <ul class="footer__list">
+          <a class="footer__social-link" href="#">
+          <li class="footer__list-item">
+            <img
+              src="./images/facebook_white.svg"
+              alt="facebook logo"
+              class="footer__social-icon"
+            />
+              Facebook
+          </li>
+        </a>
+        <a class="footer__social-link" href="#"> 
+          <li class="footer__list-item">
+            <img
+              src="./images/instagram_white.svg"
+              alt="instagram logo"
+              class="footer__social-icon"
+            />
+              Instagram
+          </li>
+        </a>
+        </ul>  
+      </div>
+        <p class="footer__copyright">@2022 Cristopher Campos</p> 
+      </footer>
     </div>
   </body>
 </html>
