Finished Project awaiting coder revision

--- a/index.html
+++ b/index.html
@@ -184,36 +184,39 @@
       </main>
       <footer class="footer">        
         <div class="footer__content">
-        <h5 class="footer__logo">             
-          <img
-            src="./images/practicum_logo.svg"
-            alt="practicum logo"
-        </h5>
-        <h5 class="footer__social-heading">Social media</h5>
-        <ul class="footer__list">
-          <a class="footer__social-link" href="#">
-          <li class="footer__list-item">
+          <h5 class="footer__logo">             
             <img
-              src="./images/facebook_white.svg"
-              alt="facebook logo"
-              class="footer__social-icon"
-            />
-              Facebook
-          </li>
-        </a>
-        <a class="footer__social-link" href="#"> 
-          <li class="footer__list-item">
-            <img
-              src="./images/instagram_white.svg"
-              alt="instagram logo"
-              class="footer__social-icon"
-            />
-              Instagram
-          </li>
-        </a>
-        </ul>  
-      </div>
-        <p class="footer__copyright">@2022 Cristopher Campos</p> 
+              src="./images/practicum_logo.svg"
+              alt="practicum logo"
+              />
+          </h5> 
+          <p class="footer__copyright">@2022 Cristopher Campos</p>  
+        </div>
+        <div class="footer__content">
+          <h5 class="footer__social-heading">Social media</h5>
+          <ul class="footer__list">
+            <a class="footer__social-link" href="#">
+            <li class="footer__list-item">
+              <img
+                src="./images/facebook_white.svg"
+                alt="facebook logo"
+                class="footer__social-icon"
+              />
+                Facebook
+            </li>
+          </a>
+          <a class="footer__social-link" href="#"> 
+            <li class="footer__list-item">
+              <img
+                src="./images/instagram_white.svg"
+                alt="instagram logo"
+                class="footer__social-icon"
+              />
+                Instagram
+            </li>
+          </a>
+          </ul>  
+        </div>
       </footer>
     </div>
   </body>
