--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Practicum Coffeeshop</title>
     <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" type="image" href="./images/favicon_coffee_bean.ico" />
+    <link rel="icon" href="./images/favicon_coffee_bean.ico" />
   </head>
   <body>
     <div class="page">
@@ -66,26 +66,27 @@
           </p>
           <div class="menu__cards">
           <div class="card">
-          <h3 class="card__title">Filter</h3>
-          <ul class="card__list">
-            <li class="card__list-item">
-              Regular (12oz)<span class="card__list-divider"></span>$1
-            </li>
-            <li class="card__list-item">
-              Large(16oz)<span class="card__list-divider"></span> $1.25
-            </li>
+            <h3 class="card__title">Filter</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Regular (12oz)<span class="card__list-divider"></span>$1
+              </li>
+              <li class="card__list-item">
+                Large(16oz)<span class="card__list-divider"></span> $1.25
+              </li>
 
-            <li class="card__list-item">
-              XL (20oz)<span class="card__list-divider"></span>$1.5
-            </li>
+              <li class="card__list-item">
+                XL (20oz)<span class="card__list-divider"></span>$1.5
+              </li>
 
-            <li class="card__list-item">
-              Party-size (24oz, decaf) <span class="card__list-divider"></span>$1.75
-            </li>
+              <li class="card__list-item">
+                Party-size (24oz, decaf) <span class="card__list-divider"></span>$1.75
+              </li>
 
-            <li class="card__list-item">
-              Iced Coffee (16oz) &nbsp;<span class="card__list-divider" ></span>$1.25
-            </li>
+              <li class="card__list-item">
+                Iced Coffee (16oz) &nbsp;<span class="card__list-divider" ></span>$1.25
+              </li>
+            </ul>
           </div>                    
           <div class="card">
             <h3 class="card__title">Espresso</h3> 
@@ -134,14 +135,14 @@
           <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenienece:</p>
           <div class="recipes__videos">
             <div>
-              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
               <p class="recipes__video-caption">
               <span>Aeropress Recipe</span>
               <span>~5 min</span>
             </p>
             </div>
             <div>
-            <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p class="recipes__video-caption">
               <span>French Press Recipe</span>
               <span>~15 min</span>
@@ -154,17 +155,17 @@
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Name *</label>
-              <input class="form__input" type="text" id="name" required placeholder="Name Surname"></input>
+              <input class="form__input" type="text" id="name" required placeholder="Name Surname">
               <label class="form__label" for="number">Number of guests *</label>
-              <input class="form__input" type="number" id="number" required placeholder="1-8"></input>
+              <input class="form__input" type="number" id="number" required placeholder="1-8">
               <label class="form__label" for="datetime">Date & time *</label>
-              <input class="form__input" type="datetime-local" id="datetime" required placeholder="mm/dd/yyyy --:-- --" ></input>
+              <input class="form__input" type="datetime-local" id="datetime" required" ></input>
               <label class="form__label" for="email">Your email *</label>
-              <input class="form__input" type="email" id="email" required placeholder="email@email.com"></input>  
+              <input class="form__input" type="email" id="email" required placeholder="email@email.com"> 
             </fieldset>
               <button class="form__button" type="submit">Book a table</button> 
               <label class="form__label" for="tos">
-                <input class="form__checkbox" type="checkbox" id="tos" required></input>        
+                <input class="form__checkbox" type="checkbox" id="tos" required>       
                 I agree with the terms of use
               </label>
           </form>
@@ -194,8 +195,9 @@
         </div>
         <div class="footer__content">
           <h5 class="footer__social-heading">Social media</h5>
+          <a class="footer__social-link" href="#">
           <ul class="footer__list">
-            <a class="footer__social-link" href="#">
+            
             <li class="footer__list-item">
               <img
                 src="./images/facebook_white.svg"
