Awaiting Code Review

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <label class="form__label" for="number">Number of guests *</label>
               <input class="form__input" type="number" id="number" required placeholder="1-8">
               <label class="form__label" for="datetime">Date & time *</label>
-              <input class="form__input" type="datetime-local" id="datetime" required" ></input>
+              <input class="form__input" type="datetime-local" id="datetime" required>
               <label class="form__label" for="email">Your email *</label>
               <input class="form__input" type="email" id="email" required placeholder="email@email.com"> 
             </fieldset>
@@ -197,7 +197,6 @@
           <h5 class="footer__social-heading">Social media</h5>
           <a class="footer__social-link" href="#">
           <ul class="footer__list">
-            
             <li class="footer__list-item">
               <img
                 src="./images/facebook_white.svg"
