--- a/index.html
+++ b/index.html
@@ -65,88 +65,114 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-          <div class="card">
-            <h3 class="card__title">Filter</h3>
-            <ul class="card__list">
-              <li class="card__list-item">
-                Regular (12oz)<span class="card__list-divider"></span>$1
-              </li>
-              <li class="card__list-item">
-                Large(16oz)<span class="card__list-divider"></span> $1.25
-              </li>
+            <div class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Regular (12oz)<span class="card__list-divider"></span>$1
+                </li>
+                <li class="card__list-item">
+                  Large(16oz)<span class="card__list-divider"></span> $1.25
+                </li>
 
-              <li class="card__list-item">
-                XL (20oz)<span class="card__list-divider"></span>$1.5
-              </li>
+                <li class="card__list-item">
+                  XL (20oz)<span class="card__list-divider"></span>$1.5
+                </li>
 
-              <li class="card__list-item">
-                Party-size (24oz, decaf) <span class="card__list-divider"></span>$1.75
-              </li>
+                <li class="card__list-item">
+                  Party-size (24oz, decaf)
+                  <span class="card__list-divider"></span>$1.75
+                </li>
 
-              <li class="card__list-item">
-                Iced Coffee (16oz) &nbsp;<span class="card__list-divider" ></span>$1.25
-              </li>
-            </ul>
-          </div>                    
-          <div class="card">
-            <h3 class="card__title">Espresso</h3> 
-            <ul class="card__list">
-              <li class="card__list-item">
-                Macchiato<span class="card__list-divider"></span> $2.25
-              </li>
-              <li class="card__list-item">
-                Cortado<span class="card__list-divider"></span> $2.5
-              </li>
-              <li class="card__list-item">
-                Mocha<span class="card__list-divider"></span> $3
-              </li>
-              <li class="card__list-item">
-                Sunrise in the Bay Area<span class="card__list-divider"></span> $10
-              </li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3 class="card__title">Baked Goods</h3>
-            <ul class="card__list">
-              <li class="card__list-item">
-                Almond Croissant<span class="card__list-divider"></span> $2
-              </li>
-              <li class="card__list-item">
-                Banana Bread<span class="card__list-divider"></span> $1.75
-              </li>              
-              <li class="card__list-item">
-                Key Lime Pie<span class="card__list-divider"></span> $3
-              </li>
-              <li class="card__list-item">
-                Blue Velvet Cake<span class="card__list-divider"></span> $3.75
-              </li>
-              <li class="card__list-item">
-                Web Cookie<span class="card__list-divider"></span> $2
-              </li> 
-              <li class="card__list-item">
-                Fresh Bug'uette<span class="card__list-divider"></span> $0.25
-              </li>
-            </ul>
-          </div>
+                <li class="card__list-item">
+                  Iced Coffee (16oz) &nbsp;<span
+                    class="card__list-divider"
+                  ></span
+                  >$1.25
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato<span class="card__list-divider"></span> $2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado<span class="card__list-divider"></span> $2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha<span class="card__list-divider"></span> $3
+                </li>
+                <li class="card__list-item">
+                  Sunrise in the Bay Area<span
+                    class="card__list-divider"
+                  ></span>
+                  $10
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croissant<span class="card__list-divider"></span> $2
+                </li>
+                <li class="card__list-item">
+                  Banana Bread<span class="card__list-divider"></span> $1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie<span class="card__list-divider"></span> $3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake<span class="card__list-divider"></span> $3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie<span class="card__list-divider"></span> $2
+                </li>
+                <li class="card__list-item">
+                  Fresh Bug'uette<span class="card__list-divider"></span> $0.25
+                </li>
+              </ul>
+            </div>
           </div>
         </section>
         <section class="recipes" id="Recipes">
           <h1 class="recipes__title">Recipes</h1>
-          <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenienece:</p>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenienece:
+          </p>
           <div class="recipes__videos">
             <div>
-              <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+              <iframe
+                class="recipes__iframe"
+                width="1864"
+                height="780"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                title="The Ultimate AeroPress Technique (Episode #3)"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
               <p class="recipes__video-caption">
-              <span>Aeropress Recipe</span>
-              <span>~5 min</span>
-            </p>
+                <span>Aeropress Recipe</span>
+                <span>~5 min</span>
+              </p>
             </div>
             <div>
-            <iframe class="recipes__iframe" width="1864" height="780" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <p class="recipes__video-caption">
-              <span>French Press Recipe</span>
-              <span>~15 min</span>
-            </p>
+              <iframe
+                class="recipes__iframe"
+                width="1864"
+                height="780"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                title="The Ultimate French Press Technique"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French Press Recipe</span>
+                <span>~15 min</span>
+              </p>
             </div>
           </div>
         </section>
@@ -155,68 +181,98 @@
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Name *</label>
-              <input class="form__input" type="text" id="name" required placeholder="Name Surname">
+              <input
+                class="form__input"
+                type="text"
+                id="name"
+                required
+                placeholder="Name Surname"
+              />
               <label class="form__label" for="number">Number of guests *</label>
-              <input class="form__input" type="number" id="number" required placeholder="1-8">
+              <input
+                class="form__input"
+                type="number"
+                id="number"
+                required
+                placeholder="1-8"
+              />
               <label class="form__label" for="datetime">Date & time *</label>
-              <input class="form__input" type="datetime-local" id="datetime" required>
+              <input
+                class="form__input"
+                type="datetime-local"
+                id="datetime"
+                required
+              />
               <label class="form__label" for="email">Your email *</label>
-              <input class="form__input" type="email" id="email" required placeholder="email@email.com"> 
+              <input
+                class="form__input"
+                type="email"
+                id="email"
+                required
+                placeholder="email@email.com"
+              />
             </fieldset>
-              <button class="form__button" type="submit">Book a table</button> 
-              <label class="form__label" for="tos">
-                <input class="form__checkbox" type="checkbox" id="tos" required>       
-                I agree with the terms of use
-              </label>
+            <button class="form__button" type="submit">Book a table</button>
+            <label class="form__label" for="tos">
+              <input class="form__checkbox" type="checkbox" id="tos" required />
+              I agree with the terms of use
+            </label>
           </form>
         </section>
         <section class="about" id="Contacts">
           <div class="about">
-            <h4 class="about__title">About the Cofee Shop</h4>    
+            <h4 class="about__title">About the Cofee Shop</h4>
             <div class="about__circle"></div>
             <div class="about__circle about__circle_animation_blurred"></div>
           </div>
-          <div class=about__content>
-            <p class="about__paragraph">Our coffee shop is located in the Practicum Library's hall. It features 6 tables and free WiFi.</p>
-            <P class="about__paragraph"> Our main mission is keeping guests cozy and energized.</p>
-            <p class="about__paragraph">Besides that, we try to reduce our environmental impact — so we don't sell single-use cups. But you can buy one of our reusable cups!</p>
-        </div>
-       </section>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Practicum Library's hall. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+        </section>
       </main>
-      <footer class="footer">        
+      <footer class="footer">
         <div class="footer__content">
-          <h5 class="footer__logo">             
-            <img
-              src="./images/practicum_logo.svg"
-              alt="practicum logo"
-              />
-          </h5> 
-          <p class="footer__copyright">@2022 Cristopher Campos</p>  
+          <h5 class="footer__logo">
+            <img src="./images/practicum_logo.svg" alt="practicum logo" />
+          </h5>
+          <p class="footer__copyright">@2022 Cristopher Campos</p>
         </div>
         <div class="footer__content">
           <h5 class="footer__social-heading">Social media</h5>
-          <a class="footer__social-link" href="#">
+
           <ul class="footer__list">
-            <li class="footer__list-item">
-              <img
-                src="./images/facebook_white.svg"
-                alt="facebook logo"
-                class="footer__social-icon"
-              />
+            <a class="footer__social-link" href="#">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="facebook logo"
+                  class="footer__social-icon"
+                />
                 Facebook
-            </li>
-          </a>
-          <a class="footer__social-link" href="#"> 
-            <li class="footer__list-item">
-              <img
-                src="./images/instagram_white.svg"
-                alt="instagram logo"
-                class="footer__social-icon"
-              />
+              </li>
+            </a>
+            <a class="footer__social-link" href="#">
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="instagram logo"
+                  class="footer__social-icon"
+                />
                 Instagram
-            </li>
-          </a>
-          </ul>  
+              </li>
+            </a>
+          </ul>
         </div>
       </footer>
     </div>
