waiting on code reviewer

--- a/index.html
+++ b/index.html
@@ -250,28 +250,23 @@
         </div>
         <div class="footer__content">
           <h5 class="footer__social-heading">Social media</h5>
-
           <ul class="footer__list">
-            <a class="footer__social-link" href="#">
-              <li class="footer__list-item">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="facebook logo"
-                  class="footer__social-icon"
-                />
-                Facebook
-              </li>
-            </a>
-            <a class="footer__social-link" href="#">
-              <li class="footer__list-item">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="instagram logo"
-                  class="footer__social-icon"
-                />
-                Instagram
-              </li>
-            </a>
+            <li class="footer__list-item">
+              <img
+                src="./images/facebook_white.svg"
+                alt="facebook logo"
+                class="footer__social-icon"
+              />
+              <a class="footer__social-link" href="#">Facebook</a>
+            </li>
+            <li class="footer__list-item">
+              <img
+                src="./images/instagram_white.svg"
+                alt="instagram logo"
+                class="footer__social-icon"
+              />
+              <a class="footer__social-link" href="#">Instagram</a>
+            </li>
           </ul>
         </div>
       </footer>
