Code Review Pending

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__title_span-accent">Specialty coffee</span>in the
+          <span class="header__span-accent">Specialty coffee</span>in the
           Practicum Library
         </h1>
         <p class="header__description">
@@ -46,7 +46,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__wrapper_footer">
+          <div class="header__paragraph_wrapper_footer">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday-Friday (10:00-19:00)</p>
             <p class="header__paragraph">Saturday-Sunday (11:00-18:00)</p>
