--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__paragraph_wrapper_footer">
+          <div class="header__hours">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday-Friday (10:00-19:00)</p>
             <p class="header__paragraph">Saturday-Sunday (11:00-18:00)</p>
