--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practicum Coffeeshop</title>
-    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./images/favicon_coffee_bean.ico" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img
-          class="header__logo"
+          class="logo"
           src="./images/logo_coffee_shop.svg"
           alt="Practicum Coffeeshop Logo"
         />
@@ -138,7 +143,7 @@
           </div>
         </section>
         <section class="recipes" id="Recipes">
-          <h1 class="recipes__title">Recipes</h1>
+          <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenienece:
@@ -147,8 +152,6 @@
             <div>
               <iframe
                 class="recipes__iframe"
-                width="1864"
-                height="780"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="The Ultimate AeroPress Technique (Episode #3)"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -177,7 +180,7 @@
           </div>
         </section>
         <section class="reservation" id="Reservation">
-          <h1 class="reservation__title">Book a table</h1>
+          <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Name *</label>
@@ -220,11 +223,9 @@
           </form>
         </section>
         <section class="about" id="Contacts">
-          <div class="about">
-            <h4 class="about__title">About the Cofee Shop</h4>
-            <div class="about__circle"></div>
-            <div class="about__circle about__circle_animation_blurred"></div>
-          </div>
+          <h2 class="about__title">About the Cofee Shop</h2>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
@@ -242,32 +243,37 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__content">
-          <h5 class="footer__logo">
-            <img src="./images/practicum_logo.svg" alt="practicum logo" />
-          </h5>
-          <p class="footer__copyright">@2022 Cristopher Campos</p>
-        </div>
+          <img
+            src="./images/practicum_logo.svg"
+            alt="practicum logo"
+            class="footer__logo"
+          />
         <div class="footer__content">
           <h5 class="footer__social-heading">Social media</h5>
           <ul class="footer__list">
             <li class="footer__list-item">
-              <img
+            <a class="footer__social-link" href="#">
+                <img
                 src="./images/facebook_white.svg"
                 alt="facebook logo"
                 class="footer__social-icon"
               />
-              <a class="footer__social-link" href="#">Facebook</a>
+            Facebook
+              </a>
             </li>
             <li class="footer__list-item">
-              <img
+            <a class="footer__social-link" href="#">
+                <img
                 src="./images/instagram_white.svg"
                 alt="instagram logo"
                 class="footer__social-icon"
-              />
-              <a class="footer__social-link" href="#">Instagram</a>
-            </li>
-          </ul>
+              />  
+              Instagram
+            </a>   
+            </li>  
+          </ul>    
+        </div>
+            <p class="footer__copyright">@2022 Cristopher Campos</p>    
         </div>
       </footer>
     </div>
